test/pending/neg/plugin-rafter-before-1/lib/plugins.jar.desired.sha1
af91fd67ccef349e7f8ea662615e17796a339485 ?plugins.jar
